Ensuring valid session

--- a/static/index.html
+++ b/static/index.html
@@ -36,6 +36,7 @@
             </g>
           </svg>
           <h1>BananaStore <span class="titlebar-tagline">— Where Ideas Go Bananas</span></h1>
+          <span class="bs-about" tabindex="0" role="button" aria-label="About"><i class="ph ph-info"></i><span class="bs-about-tip"><strong>BananaStore</strong><br><span class="bs-about-sub">Where Ideas Go Bananas</span><br><span class="bs-about-legal">&copy; 2026 Michael Ikemann<br>MIT License</span></span></span>
         </header>
 
         <div class="window-body">
