--- a/static/index.html
+++ b/static/index.html
@@ -67,6 +67,10 @@
                     <span class="field-label"><i class="ph ph-file-image"></i> <span data-i18n="bs.label_format">Format</span></span>
                     <div class="option-pills" id="formatPills"></div>
                   </div>
+                  <div class="option-group" id="modelGroup" hidden>
+                    <span class="field-label"><i class="ph ph-cpu"></i> <span data-i18n="bs.label_model">Model</span></span>
+                    <div class="option-pills" id="modelPills"></div>
+                  </div>
                 </div>
               </div>
 
